# dioxus-wasm-blog

./: Cargo.toml  README.md  justfile  package-lock.json  package.json  tailwind.config.js
public/: index.html
src/: main.rs
